yamls/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickandmorty-app
spec:
  selector:
    app: rickandmorty-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
